--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: utaengine
 Title: Routing and aggregation engine for 'Urban Transport Analyst'
-Version: 0.0.1.011
+Version: 0.0.1.012
 Authors@R: 
     person(given = "Mark",
            family = "Padgham",
@@ -13,8 +13,12 @@ BugReports: https://github.com/UrbanAnalyst/uta-engine/issues
 Imports:
     checkmate,
     geodist,
-    raster
+    m4ra,
+    raster,
+    sf,
+    sfheaders
 Remotes:
+    atfutures/m4ra,
     hypertidy/geodist
 Encoding: UTF-8
 LazyData: true
