add 'uta-index.R' with main index calculation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: utaengine
 Title: Routing and aggregation engine for 'Urban Transport Analyst'
-Version: 0.0.1.015
+Version: 0.0.1.016
 Authors@R: 
     person(given = "Mark",
            family = "Padgham",
@@ -12,7 +12,11 @@ URL: https://github.com/UrbanAnalyst/uta-engine
 BugReports: https://github.com/UrbanAnalyst/uta-engine/issues
 Imports:
     checkmate,
+    cli,
+    fs,
     geodist,
+    gtfsrouter,
+    hms,
     m4ra,
     raster,
     sf,
