--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: utaengine
 Title: Routing and aggregation engine for 'Urban Transport Analyst'
-Version: 0.0.1.016
+Version: 0.0.1.017
 Authors@R: 
     person(given = "Mark",
            family = "Padgham",
@@ -18,6 +18,7 @@ Imports:
     gtfsrouter,
     hms,
     m4ra,
+    rappdirs,
     raster,
     sf,
     sfheaders
