--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,6 +31,7 @@ repos:
           (.*/|)\.pre-commit-.*|
           .*\.[rR]|
           .*\.Rproj|
+          .*\.png|
           .*\.py|
           .*\.feather|
           .*\.rds|
