--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: utaengine
 Title: Routing and aggregation engine for 'Urban Transport Analyst'
-Version: 0.1.0.005
+Version: 0.1.0.006
 Authors@R: 
     person(given = "Mark",
            family = "Padgham",
@@ -24,8 +24,10 @@ Suggests:
     dodgr,
     dplyr,
     fs,
+    fst,
     gtfsrouter,
     mapdeck,
+    rappdirs,
     testthat (>= 3.0.0)
 Remotes:
     atfutures/m4ra,
