--- a/.github/workflows/check-extra-os.yaml
+++ b/.github/workflows/check-extra-os.yaml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches: main
 
-name: R-CMD-check
+name: extra-os-check
 
 jobs:
 
@@ -18,11 +18,11 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          #- {os: macOS-latest,   r: 'release'}
-          #- {os: windows-latest, r: 'release'}
-          - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
-          - {os: ubuntu-latest,   r: 'release'}
-          - {os: ubuntu-latest,   r: 'oldrel-1'}
+          - {os: macOS-latest,   r: 'release'}
+          - {os: windows-latest, r: 'release'}
+            #- {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
+            #- {os: ubuntu-latest,   r: 'release'}
+            #- {os: ubuntu-latest,   r: 'oldrel-1'}
 
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
