--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: utaengine
 Title: Routing and aggregation engine for 'Urban Transport Analyst'
-Version: 0.1.0.014
+Version: 0.1.0.015
 Authors@R: 
     person(given = "Mark",
            family = "Padgham",
@@ -25,6 +25,7 @@ Suggests:
     dplyr,
     fs,
     fst,
+    geojsonio,
     gtfsrouter,
     knitr,
     mapdeck,
