add 'uta_osm_to_sc' fn

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(pop2point)
 export(uta_extract_osm)
 export(uta_index)
 export(uta_interpolate)
+export(uta_osm_to_sc)
 export(uta_plot)
 export(uta_to_geojson)
 export(uta_vertices)
