rename 'uta_plot' -> 'uta_plot_network'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,6 @@ export(uta_index)
 export(uta_index_batch)
 export(uta_interpolate)
 export(uta_osm_to_sc)
-export(uta_plot)
+export(uta_plot_network)
 export(uta_to_geojson)
 export(uta_vertices)
