add 'uta_plot_polygons' fn

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,5 +7,6 @@ export(uta_index_batch)
 export(uta_interpolate)
 export(uta_osm_to_sc)
 export(uta_plot_network)
+export(uta_plot_polygons)
 export(uta_to_geojson)
 export(uta_vertices)
