--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,3 +12,4 @@ export(uta_plot_network)
 export(uta_plot_polygons)
 export(uta_to_geojson)
 export(uta_vertices)
+useDynLib(utaengine, .registration = TRUE)
