--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: utaengine
 Title: Routing and aggregation engine for 'Urban Transport Analyst'
-Version: 0.1.0.115
+Version: 0.1.0.116
 Authors@R: 
     person(given = "Mark",
            family = "Padgham",
@@ -38,6 +38,7 @@ Suggests:
     withr
 LinkingTo: cpp11
 Remotes:
+    atfutures/dodgr,
     atfutures/m4ra,
     hypertidy/geodist
 SystemRequirements: osmium-tool, C++11
