export 'uta_prepare_data' fn

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(uta_interpolate)
 export(uta_osm_to_sc)
 export(uta_plot_network)
 export(uta_plot_polygons)
+export(uta_prepare_data)
 export(uta_to_geojson)
 export(uta_vertices)
 useDynLib(utaengine, .registration = TRUE)
