--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
-Package: utaengine
-Title: Routing and aggregation engine for 'Urban Transport Analyst'
-Version: 0.1.0.182
+Package: uaengine
+Title: Routing and aggregation engine for 'Urban Analyst'
+Version: 0.2.0
 Authors@R: 
     person(given = "Mark",
            family = "Padgham",
