--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,18 +2,17 @@
 # R specific hooks: https://github.com/lorenzwalthert/precommit
 repos:
 -   repo: https://github.com/lorenzwalthert/precommit
-    rev: v0.3.2.9019
+    rev: v0.4.0
     hooks: 
     -   id: style-files
         args: [--style_pkg=spaceout, --style_fun=spaceout_style]    
         additional_dependencies:
-        - styler
         - ropensci-review-tools/spaceout
         exclude: >
           .*RcppExports
-
+          # -   id: roxygenize
     # codemeta must be above use-tidy-description when both are used
-    -   id: codemeta-description-updated
+    # -   id: codemeta-description-updated
     -   id: use-tidy-description
     -   id: spell-check
         exclude: >
@@ -49,10 +48,12 @@ repos:
     -   id: readme-rmd-rendered
     -   id: parsable-R
     -   id: no-browser-statement
+    -   id: no-print-statement
     -   id: no-debug-statement
     -   id: deps-in-desc
+      # -   id: pkgdown
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v4.5.0
     hooks: 
     -   id: check-added-large-files
         args: ['--maxkb=200']
@@ -61,9 +62,9 @@ repos:
     -   id: end-of-file-fixer
         exclude: '\.Rd'
 -   repo: https://github.com/pre-commit-ci/pre-commit-ci-config
-    rev: v1.5.1
+    rev: v1.6.1
     hooks:
-    # Only reuiqred when https://pre-commit.ci is used for config validation
+    # Only required when https://pre-commit.ci is used for config validation
     -   id: check-pre-commit-ci-config
 -   repo: local
     hooks:
@@ -72,11 +73,12 @@ repos:
         entry: Cannot commit .Rhistory, .RData, .Rds or .rds.
         language: fail
         files: '\.(Rhistory|RData|Rds|rds)$'
+        # `exclude: <regex>` to allow committing specific files
     -   id: description version
         name: Version has been incremeneted in DESCRIPTION
         entry: .hooks/description
         language: script
-        # `exclude: <regex>` to allow committing specific files
 
 ci:
     autoupdate_schedule: monthly
+      # skip: [pkgdown]
