--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: uaengine
 Title: Routing and aggregation engine for 'Urban Analyst'
-Version: 0.3.2
+Version: 0.3.2.001
 Authors@R: 
     person(given = "Mark",
            family = "Padgham",
@@ -30,6 +30,7 @@ Suggests:
     gtfsrouter,
     knitr,
     mapdeck,
+    memoise,
     osmdata,
     rappdirs,
     RcppParallel,
